@@ -1,3 +1,3 @@
-<div id="session"><%= @session[:key] %></div>
-<div id="params"><%= @params[:key] %></div>
-<div id="flash"><%= @flash[:key] %></div>
+<div id="session"><%= session[:key] %></div>
+<div id="params"><%= params[:key] %></div>
+<div id="flash"><%= flash[:key] %></div>
